--- a/index.html
+++ b/index.html
@@ -1,164 +1,207 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Document</title>
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+      integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+      integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+      integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+      integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+      crossorigin="anonymous"
+    ></script>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-    integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
-    integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous" />
-  <link rel="stylesheet" href="./css/styles.css">
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-    crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-    integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-    crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
-    integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-    crossorigin="anonymous"></script>
-</head>
-
-<body>
-  <div class="container-fluid">
-    <div class="green-box">
-      <div class="row">
-        <div class="arena">
-          <div class="col-md-4 col-lg-4 col-xl-3 header" style="border-right: 1px solid #d7d0ca">
-            <div class="row" style="border-bottom: 1px solid #d7d0ca">
-              <!-- actual header -->
-              <div class="col-7 col-sm-7 col-md-7 col-lg-7 col-xl-7">
-                <div class="logged-in-user-image">
-                  <img src="./images/pp.jpg" alt="logged-in-user-image" class="header-logged-in-user-applied-class">
-                </div>
-              </div>
-              <div class="col-5 col-sm-5 col-md-5 col-lg-5 col-xl-5">
-                <div class="logo-seciton-flex">
-                  <div>
-                    <i class="fas fa-circle-notch"></i>
-                  </div>
-                  <div class="l2">
-                    <i class="far fa-comment-alt"></i>
-                  </div>
-                  <div class="l3">
-                    <i class="fas fa-ellipsis-v"></i>
+  <body>
+    <div class="container-fluid">
+      <div class="green-box">
+        <div class="row">
+          <div class="arena">
+            <div
+              class="col-md-4 col-lg-4 col-xl-3 header"
+              style="border-right: 1px solid #d7d0ca"
+            >
+              <div class="row" style="border-bottom: 1px solid #d7d0ca">
+                <!-- actual header -->
+                <div class="col-7 col-sm-7 col-md-7 col-lg-7 col-xl-7">
+                  <div class="logged-in-user-image">
+                    <img
+                      src="./images/pp.jpg"
+                      alt="logged-in-user-image"
+                      class="header-logged-in-user-applied-class"
+                    />
                   </div>
                 </div>
-              </div>
-            </div>
-            <div>
-              <div class="search-box">
-                <div class="control-input-width">
-                  <input type="text" class="form-control" id="searchByName" placeholder="Search or start new Chat" />
-                </div>
-              </div>
-            </div>
-            <div class="chat-history">
-              <div class="row">
-                <div class="chat-box">
-                  <div class="image-section">
-                    <img src="./images/pp_1.jpeg" alt="img1" class="chat-box-sender-image" />
-                  </div>
-                  <div class="chat-title-and-contents">
+                <div class="col-5 col-sm-5 col-md-5 col-lg-5 col-xl-5">
+                  <div class="logo-seciton-flex">
                     <div>
-                      <div class="row">
-                        <div class="col-9">
-                          <span class="message">Hey</span>
-                        </div>
-                        <div class="col-2 time">
-                          <span>12:36</span>
-                        </div>
-                      </div>
-                      <div class="sender-contents">
+                      <i class="fas fa-circle-notch"></i>
+                    </div>
+                    <div class="l2">
+                      <i class="far fa-comment-alt"></i>
+                    </div>
+                    <div class="l3">
+                      <i class="fas fa-ellipsis-v"></i>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div>
+                <div class="search-box">
+                  <div class="control-input-width">
+                    <input
+                      type="text"
+                      class="form-control"
+                      id="searchByName"
+                      placeholder="Search or start new Chat"
+                    />
+                  </div>
+                </div>
+              </div>
+              <div class="chat-history">
+                <div class="row">
+                  <div class="chat-box">
+                    <div class="image-section">
+                      <img
+                        src="./images/pp_1.jpeg"
+                        alt="img1"
+                        class="chat-box-sender-image"
+                      />
+                    </div>
+                    <div class="chat-title-and-contents">
+                      <div>
                         <div class="row">
                           <div class="col-9">
-                            <span>How was your day?</span>
+                            <span class="message">Hey</span>
                           </div>
-                          <div class="col-2 messages-pending">
-                            <span class="badge badge-pill badge-success">22</span>
+                          <div class="col-2 time">
+                            <span>12:36</span>
+                          </div>
+                        </div>
+                        <div class="sender-contents">
+                          <div class="row">
+                            <div class="col-9">
+                              <span>How was your day?</span>
+                            </div>
+                            <div class="col-2 messages-pending">
+                              <span class="badge badge-pill badge-success"
+                                >22</span
+                              >
+                            </div>
                           </div>
                         </div>
                       </div>
                     </div>
                   </div>
-                </div>
-                <div class="chat-box">
-                  <div class="image-section">
-                    <img src="./images/pp_2.jpeg" alt="img1" class="chat-box-sender-image" />
-                  </div>
-                  <div class="chat-title-and-contents">
-                    <div>
+                  <div class="chat-box">
+                    <div class="image-section">
+                      <img
+                        src="./images/pp_2.jpeg"
+                        alt="img1"
+                        class="chat-box-sender-image"
+                      />
+                    </div>
+                    <div class="chat-title-and-contents">
                       <div>
-                        <span>Hey</span>
-                        <span class="time">12:36</span>
-                      </div>
-                      <div class="sender-contents">
-                        <span>How was your day?</span>
+                        <div>
+                          <span>Hey</span>
+                          <span class="time">12:36</span>
+                        </div>
+                        <div class="sender-contents">
+                          <span>How was your day?</span>
+                        </div>
                       </div>
                     </div>
                   </div>
                 </div>
               </div>
             </div>
-          </div>
-          <div class="col-md-8 col-lg-8 col-xl-9 header">
-            <div class="row" style="border-bottom: 1px solid #d7d0ca">
-              <div class="col-10 col-sm-10 col-md-10 col-lg-10 col-xl-10">
-                <div class="row">
-                  <div class="col-1 col-sm-1 col-md-1 col-lg-1 col-xl-1">
-                    <div class="logged-in-user-image">
-                      <img src="./images/pp.jpg" alt="logged-in-user-image" class="header-logged-in-user-applied-class">
-                    </div>
-                  </div>
-                  <div class="col-10 col-sm-11 col-md-11 col-lg-11 col-xl-11">
-                    <div class="sender-header-contents">
-                      <div class="group-or-senders-name">Coders Hub</div>
-                      <div class="phone-numbers">
-                        +1 (201) 443-4380, +1 (470) 343-9700, +1
-                        (703) 307-8272, +1 (716) 333-5233, +1
-                        (716) 501-8285, +1 (732) 983-6154
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="col-2 col-sm-2 col-md-2 col-lg-2 col-xl-2">
-                <div class="logo-seciton-flex">
-                  <div>
-                    <i class="fas fa-circle-notch"></i>
-                  </div>
-                  <div class="l2">
-                    <i class="far fa-comment-alt"></i>
-                  </div>
-                  <div class="l3">
-                    <i class="fas fa-ellipsis-v"></i>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="chat-section">
-
-            </div>
-            <div class="row">
-              <div class="comment-box">
-                <div class="col-1 col-sm-1 col-md-1 col-lg-1 col-xl-1">
-                  <div class="smiley-emoji">
-                    <i class="far fa-grin-alt"></i>
-                  </div>
-                </div>
+            <div class="col-md-8 col-lg-8 col-xl-9 header">
+              <div class="row" style="border-bottom: 1px solid #d7d0ca">
                 <div class="col-10 col-sm-10 col-md-10 col-lg-10 col-xl-10">
-                  <div class="write-comment-box">
-                    <div class="form-group mb-0">
-                      <input type="text" class="form-control" id="typeAMessage" placeholder="Type a Message">
+                  <div class="row">
+                    <div class="col-2 col-sm-2 col-md-2 col-lg-1 col-xl-1">
+                      <div class="logged-in-user-image">
+                        <img
+                          src="./images/pp.jpg"
+                          alt="logged-in-user-image"
+                          class="header-logged-in-user-applied-class"
+                        />
+                      </div>
+                    </div>
+                    <div class="col-10 col-sm-10 col-md-10 col-lg-11 col-xl-11">
+                      <div class="sender-header-contents">
+                        <div class="group-or-senders-name">Coders Hub</div>
+                        <div class="phone-numbers">
+                          +1 (201) 443-4380, +1 (470) 343-9700, +1 (703)
+                          307-8272, +1 (716) 333-5233, +1 (716) 501-8285, +1
+                          (732) 983-6154
+                        </div>
+                      </div>
                     </div>
                   </div>
                 </div>
-                <div class="col-1 col-sm-1 col-md-1 col-lg-1 col-xl-1">
-                  <div class="microphone">
-                    <i class="fas fa-microphone"></i>
+                <div class="col-2 col-sm-2 col-md-2 col-lg-2 col-xl-2">
+                  <div class="logo-seciton-flex">
+                    <div>
+                      <i class="fas fa-circle-notch"></i>
+                    </div>
+                    <div class="l2">
+                      <i class="far fa-comment-alt"></i>
+                    </div>
+                    <div class="l3">
+                      <i class="fas fa-ellipsis-v"></i>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="chat-section"></div>
+              <div class="row">
+                <div class="comment-box">
+                  <div class="col-1 col-sm-1 col-md-1 col-lg-1 col-xl-1">
+                    <div class="smiley-emoji">
+                      <i class="far fa-grin-alt"></i>
+                    </div>
+                  </div>
+                  <div class="col-10 col-sm-10 col-md-10 col-lg-10 col-xl-10">
+                    <div class="write-comment-box">
+                      <div class="form-group mb-0">
+                        <input
+                          type="text"
+                          class="form-control"
+                          id="typeAMessage"
+                          placeholder="Type a Message"
+                        />
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-1 col-sm-1 col-md-1 col-lg-1 col-xl-1">
+                    <div class="microphone">
+                      <i class="fas fa-microphone"></i>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -167,7 +210,5 @@
         </div>
       </div>
     </div>
-  </div>
-</body>
-
+  </body>
 </html>
