--- a/index.html
+++ b/index.html
@@ -139,68 +139,72 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-8 col-lg-8 col-xl-9 header">
-              <div class="row" style="border-bottom: 1px solid #d7d0ca">
-                <div class="col-10 col-sm-10 col-md-10 col-lg-10 col-xl-10">
-                  <div class="row">
-                    <div class="col-2 col-sm-2 col-md-2 col-lg-1 col-xl-1">
-                      <div class="logged-in-user-image">
-                        <img
-                          src="./images/pp.jpg"
-                          alt="logged-in-user-image"
-                          class="header-logged-in-user-applied-class"
-                        />
+            <div class="x">
+              <div class="col-md-8 col-lg-8 col-xl-9 header">
+                <div class="row" style="border-bottom: 1px solid #d7d0ca">
+                  <div class="col-10 col-sm-10 col-md-10 col-lg-10 col-xl-10">
+                    <div class="row">
+                      <div class="col-2 col-sm-2 col-md-2 col-lg-1 col-xl-1">
+                        <div class="logged-in-user-image">
+                          <img
+                            src="./images/pp.jpg"
+                            alt="logged-in-user-image"
+                            class="header-logged-in-user-applied-class"
+                          />
+                        </div>
                       </div>
-                    </div>
-                    <div class="col-10 col-sm-10 col-md-10 col-lg-11 col-xl-11">
-                      <div class="sender-header-contents">
-                        <div class="group-or-senders-name">Coders Hub</div>
-                        <div class="phone-numbers">
-                          +1 (201) 443-4380, +1 (470) 343-9700, +1 (703)
-                          307-8272, +1 (716) 333-5233, +1 (716) 501-8285, +1
-                          (732) 983-6154
+                      <div
+                        class="col-10 col-sm-10 col-md-10 col-lg-11 col-xl-11"
+                      >
+                        <div class="sender-header-contents">
+                          <div class="group-or-senders-name">Coders Hub</div>
+                          <div class="phone-numbers">
+                            +1 (201) 443-4380, +1 (470) 343-9700, +1 (703)
+                            307-8272, +1 (716) 333-5233, +1 (716) 501-8285, +1
+                            (732) 983-6154
+                          </div>
                         </div>
                       </div>
                     </div>
                   </div>
-                </div>
-                <div class="col-2 col-sm-2 col-md-2 col-lg-2 col-xl-2">
-                  <div class="logo-seciton-flex">
-                    <div>
-                      <i class="fas fa-circle-notch"></i>
-                    </div>
-                    <div class="l2">
-                      <i class="far fa-comment-alt"></i>
-                    </div>
-                    <div class="l3">
-                      <i class="fas fa-ellipsis-v"></i>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="chat-section"></div>
-              <div class="row">
-                <div class="comment-box">
-                  <div class="col-1 col-sm-1 col-md-1 col-lg-1 col-xl-1">
-                    <div class="smiley-emoji">
-                      <i class="far fa-grin-alt"></i>
-                    </div>
-                  </div>
-                  <div class="col-10 col-sm-10 col-md-10 col-lg-10 col-xl-10">
-                    <div class="write-comment-box">
-                      <div class="form-group mb-0">
-                        <input
-                          type="text"
-                          class="form-control"
-                          id="typeAMessage"
-                          placeholder="Type a Message"
-                        />
+                  <div class="col-2 col-sm-2 col-md-2 col-lg-2 col-xl-2">
+                    <div class="logo-seciton-flex">
+                      <div>
+                        <i class="fas fa-circle-notch"></i>
+                      </div>
+                      <div class="l2">
+                        <i class="far fa-comment-alt"></i>
+                      </div>
+                      <div class="l3">
+                        <i class="fas fa-ellipsis-v"></i>
                       </div>
                     </div>
                   </div>
-                  <div class="col-1 col-sm-1 col-md-1 col-lg-1 col-xl-1">
-                    <div class="microphone">
-                      <i class="fas fa-microphone"></i>
+                </div>
+                <div class="chat-section"></div>
+                <div class="row">
+                  <div class="comment-box">
+                    <div class="col-1 col-sm-1 col-md-1 col-lg-1 col-xl-1">
+                      <div class="smiley-emoji">
+                        <i class="far fa-grin-alt"></i>
+                      </div>
+                    </div>
+                    <div class="col-10 col-sm-10 col-md-10 col-lg-10 col-xl-10">
+                      <div class="write-comment-box">
+                        <div class="form-group mb-0">
+                          <input
+                            type="text"
+                            class="form-control"
+                            id="typeAMessage"
+                            placeholder="Type a Message"
+                          />
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-1 col-sm-1 col-md-1 col-lg-1 col-xl-1">
+                      <div class="microphone">
+                        <i class="fas fa-microphone"></i>
+                      </div>
                     </div>
                   </div>
                 </div>
