left box and UI for all resolutions

--- a/index.html
+++ b/index.html
@@ -36,15 +36,15 @@
   </head>
 
   <body>
-    <div class="container-fluid">
+    <div class="container-fluid px-0">
       <div class="green-box">
-        <div class="row">
+        <div class="row mx-0 ">
           <div class="arena">
             <div
-              class="col-md-4 col-lg-4 col-xl-3 header"
+              class="col-md-4 col-lg-4 col-xl-3 px-0 header"
               style="border-right: 1px solid #d7d0ca"
             >
-              <div class="row" style="border-bottom: 1px solid #d7d0ca">
+              <div class="row mx-0" style="border-bottom: 1px solid #d7d0ca">
                 <!-- actual header -->
                 <div class="col-7 col-sm-7 col-md-7 col-lg-7 col-xl-7">
                   <div class="logged-in-user-image">
@@ -82,7 +82,8 @@
                 </div>
               </div>
               <div class="chat-history">
-                <div class="row">
+                <div class="row mx-0">
+                  <div class="scroll-for-left-side-messages">
                   <div class="chat-box">
                     <div class="image-section">
                       <img
@@ -93,8 +94,8 @@
                     </div>
                     <div class="chat-title-and-contents">
                       <div>
-                        <div class="row">
-                          <div class="col-9">
+                        <div class="row mx-0">
+                          <div class="col-9 px-0">
                             <span class="message">Hey</span>
                           </div>
                           <div class="col-2 time">
@@ -102,8 +103,8 @@
                           </div>
                         </div>
                         <div class="sender-contents">
-                          <div class="row">
-                            <div class="col-9">
+                          <div class="row mx-0">
+                            <div class="col-9 px-0">
                               <span>How was your day?</span>
                             </div>
                             <div class="col-2 messages-pending">
@@ -136,14 +137,255 @@
                       </div>
                     </div>
                   </div>
+                  <div class="chat-box">
+                    <div class="image-section">
+                      <img
+                        src="./images/pp_2.jpeg"
+                        alt="img1"
+                        class="chat-box-sender-image"
+                      />
+                    </div>
+                    <div class="chat-title-and-contents">
+                      <div>
+                        <div>
+                          <span>Hey</span>
+                          <span class="time">12:36</span>
+                        </div>
+                        <div class="sender-contents">
+                          <span>How was your day?</span>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="chat-box">
+                    <div class="image-section">
+                      <img
+                        src="./images/pp_2.jpeg"
+                        alt="img1"
+                        class="chat-box-sender-image"
+                      />
+                    </div>
+                    <div class="chat-title-and-contents">
+                      <div>
+                        <div>
+                          <span>Hey</span>
+                          <span class="time">12:36</span>
+                        </div>
+                        <div class="sender-contents">
+                          <span>How was your day?</span>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="chat-box">
+                    <div class="image-section">
+                      <img
+                        src="./images/pp_2.jpeg"
+                        alt="img1"
+                        class="chat-box-sender-image"
+                      />
+                    </div>
+                    <div class="chat-title-and-contents">
+                      <div>
+                        <div>
+                          <span>Hey</span>
+                          <span class="time">12:36</span>
+                        </div>
+                        <div class="sender-contents">
+                          <span>How was your day?</span>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="chat-box">
+                    <div class="image-section">
+                      <img
+                        src="./images/pp_2.jpeg"
+                        alt="img1"
+                        class="chat-box-sender-image"
+                      />
+                    </div>
+                    <div class="chat-title-and-contents">
+                      <div>
+                        <div>
+                          <span>Hey</span>
+                          <span class="time">12:36</span>
+                        </div>
+                        <div class="sender-contents">
+                          <span>How was your day?</span>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="chat-box">
+                    <div class="image-section">
+                      <img
+                        src="./images/pp_2.jpeg"
+                        alt="img1"
+                        class="chat-box-sender-image"
+                      />
+                    </div>
+                    <div class="chat-title-and-contents">
+                      <div>
+                        <div>
+                          <span>Hey</span>
+                          <span class="time">12:36</span>
+                        </div>
+                        <div class="sender-contents">
+                          <span>How was your day?</span>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="chat-box">
+                      <div class="image-section">
+                        <img
+                          src="./images/pp_2.jpeg"
+                          alt="img1"
+                          class="chat-box-sender-image"
+                        />
+                      </div>
+                      <div class="chat-title-and-contents">
+                        <div>
+                          <div>
+                            <span>Hey</span>
+                            <span class="time">12:36</span>
+                          </div>
+                          <div class="sender-contents">
+                            <span>How was your day?</span>
+                          </div>
+                        </div>
+                      </div>
+                  </div>
+                  <div class="chat-box">
+                        <div class="image-section">
+                          <img
+                            src="./images/pp_2.jpeg"
+                            alt="img1"
+                            class="chat-box-sender-image"
+                          />
+                        </div>
+                        <div class="chat-title-and-contents">
+                          <div>
+                            <div>
+                              <span>Hey</span>
+                              <span class="time">12:36</span>
+                            </div>
+                            <div class="sender-contents">
+                              <span>How was your day?</span>
+                            </div>
+                          </div>
+                        </div>
+                  </div>
+                  <div class="chat-box">
+                          <div class="image-section">
+                            <img
+                              src="./images/pp_2.jpeg"
+                              alt="img1"
+                              class="chat-box-sender-image"
+                            />
+                          </div>
+                          <div class="chat-title-and-contents">
+                            <div>
+                              <div>
+                                <span>Hey</span>
+                                <span class="time">12:36</span>
+                              </div>
+                              <div class="sender-contents">
+                                <span>How was your day?</span>
+                              </div>
+                            </div>
+                          </div>
+                  </div>
+                  <div class="chat-box">
+                            <div class="image-section">
+                              <img
+                                src="./images/pp_2.jpeg"
+                                alt="img1"
+                                class="chat-box-sender-image"
+                              />
+                            </div>
+                            <div class="chat-title-and-contents">
+                              <div>
+                                <div>
+                                  <span>Hey</span>
+                                  <span class="time">12:36</span>
+                                </div>
+                                <div class="sender-contents">
+                                  <span>How was your day?</span>
+                                </div>
+                              </div>
+                            </div>
+                  </div>
+                  <div class="chat-box">
+                              <div class="image-section">
+                                <img
+                                  src="./images/pp_2.jpeg"
+                                  alt="img1"
+                                  class="chat-box-sender-image"
+                                />
+                              </div>
+                              <div class="chat-title-and-contents">
+                                <div>
+                                  <div>
+                                    <span>Hey</span>
+                                    <span class="time">12:36</span>
+                                  </div>
+                                  <div class="sender-contents">
+                                    <span>How was your day?</span>
+                                  </div>
+                                </div>
+                              </div>
+                  </div>
+                  <div class="chat-box">
+                                <div class="image-section">
+                                  <img
+                                    src="./images/pp_2.jpeg"
+                                    alt="img1"
+                                    class="chat-box-sender-image"
+                                  />
+                                </div>
+                                <div class="chat-title-and-contents">
+                                  <div>
+                                    <div>
+                                      <span>Hey</span>
+                                      <span class="time">12:36</span>
+                                    </div>
+                                    <div class="sender-contents">
+                                      <span>How was your day?</span>
+                                    </div>
+                                  </div>
+                                </div>
+                  </div>
+                  <div class="chat-box">
+                                  <div class="image-section">
+                                    <img
+                                      src="./images/pp_2.jpeg"
+                                      alt="img1"
+                                      class="chat-box-sender-image"
+                                    />
+                                  </div>
+                                  <div class="chat-title-and-contents">
+                                    <div>
+                                      <div>
+                                        <span>I am last one</span>
+                                        <span class="time">12:36</span>
+                                      </div>
+                                      <div class="sender-contents">
+                                        <span>How was your day?</span>
+                                      </div>
+                                    </div>
+                                  </div>
+                  </div>
+                </div>
                 </div>
               </div>
             </div>
             <div class="x">
-              <div class="col-md-8 col-lg-8 col-xl-9 header">
-                <div class="row" style="border-bottom: 1px solid #d7d0ca">
+              <div class="col-md-8 col-lg-8 col-xl-9 px-0 header">
+                <div class="row mx-0" style="border-bottom: 1px solid #d7d0ca">
                   <div class="col-10 col-sm-10 col-md-10 col-lg-10 col-xl-10">
-                    <div class="row">
+                    <div class="row mx-0">
                       <div class="col-2 col-sm-2 col-md-2 col-lg-1 col-xl-1">
                         <div class="logged-in-user-image">
                           <img
@@ -182,7 +424,7 @@
                   </div>
                 </div>
                 <div class="chat-section"></div>
-                <div class="row">
+                <div class="row mx-0">
                   <div class="comment-box">
                     <div class="col-1 col-sm-1 col-md-1 col-lg-1 col-xl-1">
                       <div class="smiley-emoji">
