added fixed postion for header sm-devices

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="row mx-0 ">
           <div class="arena">
             <div
-              class="col-md-4 col-lg-4 col-xl-3 px-0 header"
+              class="col-md-4 col-lg-4 col-xl-3 px-0 header sm-header"
               style="border-right: 1px solid #d7d0ca"
             >
               <div class="row mx-0" style="border-bottom: 1px solid #d7d0ca">
