--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
@@ -19,11 +20,6 @@
     />
     <link rel="stylesheet" href="./css/styles.css" />
     <script
-      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-      crossorigin="anonymous"
-    ></script>
-    <script
       src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
       integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
       crossorigin="anonymous"
@@ -33,12 +29,13 @@
       integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
       crossorigin="anonymous"
     ></script>
+    <script src="./js/sliders.js"></script>
   </head>
 
   <body>
     <div class="container-fluid px-0">
       <div class="green-box">
-        <div class="row mx-0 ">
+        <div class="row mx-0">
           <div class="arena">
             <div
               class="col-md-4 col-lg-4 col-xl-3 px-0 header sm-header"
@@ -63,11 +60,23 @@
                     <div class="l2">
                       <i class="far fa-comment-alt"></i>
                     </div>
+
                     <div class="l3">
-                      <i class="fas fa-ellipsis-v"></i>
+                      <i class="fas fa-ellipsis-v" id="left-side-ellipsis"></i>
                     </div>
+
                   </div>
                 </div>
+                <!-- box appears when clicked on ellipses start -->
+                <div id="left-side-ellipsis-box" class="sl1" style="display:none">
+                  <div class="left-side-ellipsis-box-padding">New Group</div>
+                  <div class="left-side-ellipsis-box-padding">Profile</div>
+                  <div class="left-side-ellipsis-box-padding">Archived</div>
+                  <div class="left-side-ellipsis-box-padding">Started</div>
+                  <div class="left-side-ellipsis-box-padding">Settings</div>
+                  <div class="left-side-ellipsis-box-padding">Logout</div>
+                </div>
+                <!-- box appears when clicked on ellipses end -->
               </div>
               <div>
                 <div class="search-box">
@@ -504,15 +513,22 @@
                   <div class="col-2 col-sm-2 col-md-2 col-lg-2 col-xl-2">
                     <div class="logo-seciton-flex">
                       <div>
-                        <i class="fas fa-circle-notch"></i>
+                        <i class="fas fa-search"></i>
                       </div>
                       <div class="l2">
-                        <i class="far fa-comment-alt"></i>
+                        <i class="fas fa-paperclip"></i>
                       </div>
                       <div class="l3">
-                        <i class="fas fa-ellipsis-v"></i>
+                        <i class="fas fa-ellipsis-v"  id="right-side-ellipsis"></i>
                       </div>
                     </div>
+                    <div id="right-side-ellipsis-box" class="sl2" style="display:none">
+                        <div class="right-side-ellipsis-box-padding">Contact Info</div>
+                        <div class="right-side-ellipsis-box-padding">Selected Messages</div>
+                        <div class="right-side-ellipsis-box-padding">Mute</div>
+                        <div class="right-side-ellipsis-box-padding">Clear Messages</div>
+                        <div class="right-side-ellipsis-box-padding">Delete Chat</div>
+                      </div>
                   </div>
                 </div>
                 <div class="chat-section"></div>
